plugins {
    id 'java-library'
    id 'maven-publish'
}

repositories {
    mavenLocal()
    maven {
        url = uri('https://repo.dmulloy2.net/repository/public/')
    }

    maven {
        url = uri('https://www.jitpack.io')
    }

    maven {
        url = uri('https://hub.spigotmc.org/nexus/content/repositories/snapshots/')
    }

    maven {
        url = uri('https://repo.extendedclip.com/content/repositories/placeholderapi/')
    }

    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
}

processResources {
    filesMatching("*.yml") {
        expand(project.properties)
    }
}

dependencies {
    compileOnly 'com.thenexusreborn:NexusCore:1.14-ALPHA'
    compileOnly 'com.thenexusreborn:NexusMaps:1.1-ALPHA'
    compileOnly 'com.thenexusreborn:NexusHub:1.7-ALPHA'
    compileOnly 'com.github.StarDevelopmentLLC:StarCore:1.0.0-alpha.39'
    compileOnly 'com.github.StarDevelopmentLLC:StarChat:1.0.0-alpha.20'
    compileOnly 'me.clip:placeholderapi:2.11.5'
    compileOnly 'org.spigotmc:spigot:1.8.8-R0.1-SNAPSHOT'
    compileOnly 'com.comphenix.protocol:ProtocolLib:4.8.0'
}

group = 'com.thenexusreborn'
version = '1.18-ALPHA'
description = 'NexusSurvivalGames'

jar {
    destinationDirectory = file(System.getProperty("user.home") + File.separator + "Documents" + File.separator + "JarOutput" + File.separator + "NexusReborn")
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

tasks.compileJava.dependsOn(clean)